修正題目標題與題號過近的樣式

--- a/createForm.scss
+++ b/createForm.scss
@@ -80,6 +80,7 @@ label {
         h4 {
           font-weight: bold;
           margin-bottom: 0 !important;
+          white-space: pre;
         }
 
         .required {
