--- a/createForm.scss
+++ b/createForm.scss
@@ -460,3 +460,17 @@ label {
 .w-80 {
   width: 80px;
 }
+
+.guid-message {
+  @include size(125px, 40px);
+  @include position(-50px, 50%, absolute);
+  transition: 1s;
+  border-radius: 2.5px;
+  background-color: rgba(0, 0, 0, 0.8);
+
+  p {
+    color: #fff;
+    line-height: 40px;
+    text-align: center;
+  }
+}
