--- a/createForm.scss
+++ b/createForm.scss
@@ -75,12 +75,11 @@ label {
       margin-bottom: 32px;
 
       .question-title {
-        @include flex-center();
-
-        h4 {
+        p {
+          display: inline;
+          font-size: 24px;
           font-weight: bold;
-          margin-bottom: 0 !important;
-          white-space: pre;
+          word-break: break-all;
         }
 
         .required {
@@ -106,6 +105,7 @@ label {
         @include flex-center();
         height: 24px;
         margin-top: 16px;
+        clear: both;
 
         input[type='radio'],
         input[type='checkbox'] {
